syntax = "proto3";

package farm_ng.nexus;

import "farm_ng/nexus/fundamentals.proto";

message VideoStreamRequest {
  string camera_name = 1;
  VideoEncoderSettings settings = 2;
}

message VideoEncoderSettings {
  VideoStreamResolution resolution = 1;
  uint32 bitrate = 2;
}

enum VideoStreamResolution {
  VIDEO_STREAM_RESOLUTION_UNSPECIFIED = 0;
  VIDEO_STREAM_RESOLUTION_RESOLUTION_360P = 1;
  VIDEO_STREAM_RESOLUTION_RESOLUTION_720P = 2;
}

// TODO use foxglove/ROS CompressedVideo
message VideoStreamFrame {
  Timestamp timestamp = 1;
  string frame_id = 2;
  bytes data = 3;
  string format = 4;
}

message VideoStreamFeedback {
  string active_camera_name = 1;
  uint64 average_bandwidth = 2; // kB/s
}
